basic skeleton of LMS done

--- a/schools/templates/includes/fee/fee_row.html
+++ b/schools/templates/includes/fee/fee_row.html
@@ -1,5 +1,5 @@
 <div class="web-list-item">
-	<a href = "/fees/{{doc.name}}/">
+	<a href="/fees?fee={{ doc.name }}">
 		<div class="row">
 			<div class="col-xs-6">
 				{{ doc.program }}
