--- a/schools/templates/includes/course/course_row.html
+++ b/schools/templates/includes/course/course_row.html
@@ -1,16 +1,18 @@
 <div class="web-list-item">
-	<div class="row">
-		<div class="col-xs-5">
-			{{ doc.course }}
+	<a href = "/courses?course={{ doc.course }}">
+		<div class="row">
+			<div class="col-xs-5">
+				{{ doc.course }}
+			</div>
+			<div class="col-xs-3">
+				{{ doc.group_name }}
+			</div>
+			<div class="col-xs-2">
+				{{doc.academic_term }}
+			</div>
+			<div class="col-xs-2">
+				{{ doc.academic_year }}
+			</div>
 		</div>
-		<div class="col-xs-3">
-			{{ doc.group_name }}
-		</div>
-		<div class="col-xs-2">
-			{{doc.academic_term }}
-		</div>
-		<div class="col-xs-2">
-			{{ doc.academic_year }}
-		</div>
-	</div>
+	</a>
 </div>
