--- a/schools/templates/includes/examination/examination_row.html
+++ b/schools/templates/includes/examination/examination_row.html
@@ -1,19 +1,21 @@
 <div class="web-list-item">
-	<div class="row">
-		<div class="col-xs-4">
-			{{ doc.course }}
+	<a href = "/examinations?exam={{doc.name}}">
+		<div class="row">
+			<div class="col-xs-4">
+				{{ doc.course }}
+			</div>
+			<div class="col-xs-2">
+				{{ doc.room }}
+			</div>
+			<div class="col-xs-2">
+				{{doc.schedule_date }}
+			</div>
+			<div class="col-xs-2">
+				{{ doc.from_time }}
+			</div>
+			<div class="col-xs-2">
+				{{ doc.to_time }}
+			</div>
 		</div>
-		<div class="col-xs-2">
-			{{ doc.room }}
-		</div>
-		<div class="col-xs-2">
-			{{doc.schedule_date }}
-		</div>
-		<div class="col-xs-2">
-			{{ doc.from_time }}
-		</div>
-		<div class="col-xs-2">
-			{{ doc.to_time }}
-		</div>
-	</div>
+	</a>
 </div>
