Fixes for student portal

--- a/schools/templates/includes/examination/examination_row.html
+++ b/schools/templates/includes/examination/examination_row.html
@@ -1,7 +1,7 @@
 <div class="web-list-item">
 	<div class="row">
 		<div class="col-xs-4">
-			<b>{{ doc.course }}</b>
+			{{ doc.course }}
 		</div>
 		<div class="col-xs-2">
 			{{ doc.room }}
