--- a/schools/templates/includes/course/course_row.html
+++ b/schools/templates/includes/course/course_row.html
@@ -1,10 +1,10 @@
 <div class="web-list-item">
 	<div class="row">
-		<div class="col-xs-3">
-			<b>{{ doc.group_name }}</b>
+		<div class="col-xs-5">
+			{{ doc.course }}
 		</div>
 		<div class="col-xs-3">
-			<i>{{ doc.course }}</i>
+			{{ doc.group_name }}
 		</div>
 		<div class="col-xs-2">
 			{{doc.academic_term }}
