--- a/schools/templates/includes/fee/fee_row.html
+++ b/schools/templates/includes/fee/fee_row.html
@@ -1,20 +1,17 @@
 <div class="web-list-item">
 	<a href = "/fees/{{doc.name}}/">
 		<div class="row">
-			<div class="col-xs-4">
-				<b>{{ doc.program }}</b>
+			<div class="col-xs-6">
+				{{ doc.program }}
 			</div>
 			<div class="col-xs-2">
-				{{ doc.academic_term }}
+				{{ doc.get_formatted("total_amount") }}
 			</div>
 			<div class="col-xs-2">
-				{{doc.academic_year }}
+				{{ doc.get_formatted("paid_amount") }}
 			</div>
 			<div class="col-xs-2">
-				{{ doc.due_date }}
-			</div>
-			<div class="col-xs-2">
-				{{ doc.total_amount }} $
+				{{ doc.get_formatted("outstanding_amount") }}
 			</div>
 		</div>
 	</a>
