--- a/schools/templates/includes/announcement/announcement_row.html
+++ b/schools/templates/includes/announcement/announcement_row.html
@@ -1,4 +1,5 @@
 <div class="web-list-item blog-list-item">
+<a href="/announcements?announcement={{doc.name}}">
 	<div class="row">
 		<div class="col-xs-12">
 			<h1 class="blog-header">{{ doc.subject }}</h1>
@@ -9,4 +10,5 @@
 			</p>
 		</div>
 	</div>
+</a>
 </div>
