--- a/schools/templates/pages/topics.html
+++ b/schools/templates/pages/topics.html
@@ -1,11 +1,12 @@
 {% extends "templates/web.html" %}
 
+
 {% block header %}
-	<h1> About </h1>
+	<h2> {{ doc.introduction }} </h1>
 {% endblock %}
 
 {% block page_content %}
 
-<p class="post-description"> {{ intro }} </p>
+<p class="post-description"> {{ doc.content }} </p>
 
 {% endblock %}
