[fix] changed plan to Free

--- a/schools/templates/pages/start.html
+++ b/schools/templates/pages/start.html
@@ -37,7 +37,7 @@
 	<hr style="margin: 60px 0px;">
 	<p class="text-muted small">Some functionality is disabled for the demo app. The demo data will be cleared regulary.
 		<br class="hidden-xs">
-		To start your free ERPNext Schools account, <a href="https://erpnext.com/signup?plan=Free-Solo">click here</a></p>
+		To start your free ERPNext Schools account, <a href="https://erpnext.com/signup?plan=Free">click here</a></p>
 </div>
 
 {% endblock %}
