--- a/schools/templates/pages/discussions.html
+++ b/schools/templates/pages/discussions.html
@@ -3,7 +3,7 @@
 {% block header %}
 	<h2> {{doc.subject}} </h2>
 	<p> {{doc.description}} </p>
-	<p class="text-muted small">started by: {{doc.owner}} </p>
+	<p class="text-muted small">Started by: {{doc.owner}} </p>
 {% endblock %}
 
 {% block page_content %}
